Create player that can move forward/back (NOTE: Player will have to be remade, stuck colliders. Works as proof of concept though)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/MainScene.MainScene
+EditorStartupMap=/Game/MainScene.MainScene
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
